modificar medico, falta subir cambios a db.

--- a/TCPWebClinica/WebApp/WebApp.csproj
+++ b/TCPWebClinica/WebApp/WebApp.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Administradores.aspx" />
+    <Content Include="Horarios.aspx" />
     <Content Include="NuevoMedico.aspx" />
     <Content Include="Medicos.aspx" />
     <Content Include="Content\Imagenes\carrito3.jpg" />
@@ -112,6 +113,13 @@
     </Compile>
     <Compile Include="Administradores.aspx.designer.cs">
       <DependentUpon>Administradores.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Horarios.aspx.cs">
+      <DependentUpon>Horarios.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Horarios.aspx.designer.cs">
+      <DependentUpon>Horarios.aspx</DependentUpon>
     </Compile>
     <Compile Include="NuevoMedico.aspx.cs">
       <DependentUpon>NuevoMedico.aspx</DependentUpon>
