--- a/TCPWebClinica/WebApp/WebApp.csproj
+++ b/TCPWebClinica/WebApp/WebApp.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>WebApp</RootNamespace>
     <AssemblyName>WebApp</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort>44377</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
@@ -68,7 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Administradores.aspx" />
+    <Content Include="EspecialidadesXM.aspx" />
     <Content Include="Horarios.aspx" />
+    <Content Include="NuevaEspecialidadXM.aspx" />
     <Content Include="NuevoHorario.aspx" />
     <Content Include="NuevoMedico.aspx" />
     <Content Include="Medicos.aspx" />
@@ -115,12 +117,26 @@
     <Compile Include="Administradores.aspx.designer.cs">
       <DependentUpon>Administradores.aspx</DependentUpon>
     </Compile>
+    <Compile Include="EspecialidadesXM.aspx.cs">
+      <DependentUpon>EspecialidadesXM.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EspecialidadesXM.aspx.designer.cs">
+      <DependentUpon>EspecialidadesXM.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Horarios.aspx.cs">
       <DependentUpon>Horarios.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Horarios.aspx.designer.cs">
       <DependentUpon>Horarios.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="NuevaEspecialidadXM.aspx.cs">
+      <DependentUpon>NuevaEspecialidadXM.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NuevaEspecialidadXM.aspx.designer.cs">
+      <DependentUpon>NuevaEspecialidadXM.aspx</DependentUpon>
     </Compile>
     <Compile Include="NuevoHorario.aspx.cs">
       <DependentUpon>NuevoHorario.aspx</DependentUpon>
